# fcd-practice

./: .gitignore  Cargo.toml  build.bat
src/: answer.rs  audio.rs  main.rs  piece.rs  points.rs  timer.rs
website/: fix_audio.js  index.html
